# network-anomaly

./: README.md  pyproject.toml  train_tutorial.ipynb
network_anomaly/package_inspection/: feature_calculations.py  feature_extraction.py  inspect_packages.py  packet_capture.py  random_forest_model.py
network_anomaly/train/: data.py  main.py  plot.py  train.py
